--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -59,6 +59,10 @@ body{
     --bs-navbar-active-color: var(--emphasis-2-faded);
 }
 
+nav.navbar.navbar-expand-lg.bg.fixed-top{
+    height: 50px;
+}
+
 .navbar-brand{
     color: var(--emphasis-2);
 }
@@ -73,3 +77,7 @@ body{
 .bg{
     background-color: var(--header-colour);
 }
+
+table, th, td { border: 1px solid var(--emphasis-1);}
+.item_picture {width: 100%; aspect-ratio: 1/1; object-fit: cover;}
+.cart_picture {width: 20%; aspect-ratio: 1/1; object-fit: cover;}
