--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -18,6 +18,24 @@ body{
 
 #info{
     background-color: var(--card-colour);
+    height: 600px;
+}
+
+#str_info{
+    margin-right: 10%;
+    padding-left: 30px;
+    border-radius: 15px;
+    height: 350;
+}
+
+#add{
+    margin-left: 10%;
+    padding-left: 13px;
+    border-radius: 15px;
+}
+
+#items_table{
+    border-radius: 15px;
 }
 
 #cart{
@@ -28,6 +46,10 @@ body{
 #cart_info{
     background-color: var(--card-colour);
     border-radius: 0px 0px 10px 10px;
+}
+
+.background{
+    background-color: var(--card-colour);
 }
 
 .btn-primary{
@@ -93,3 +115,5 @@ nav.navbar.navbar-expand-lg.bg.fixed-top{
 table, th, td { border-bottom: 1px solid var(--emphasis-1);}
 .item_picture {width: 100%; aspect-ratio: 1/1; object-fit: cover;}
 .cart_picture {width: 20%; aspect-ratio: 1/1; object-fit: cover;}
+
+.m-border{border-radius:0 5px 5px 0 !important;}
