--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,69 +1,85 @@
 /* All Colours for the site*/
-:root{
-	--background-colour : rgba(250, 206, 127, 0.8);
-    --card-colour: rgba(236, 200, 133, .8);	
-	--header-colour : rgb(145, 31, 39);			
-	--emphasis-1 : rgb(99, 10, 16);				
+:root {
+    --background-colour: rgba(250, 206, 127, 0.8);
+    --card-colour: rgba(236, 200, 133, .8);
+    --header-colour: rgb(145, 31, 39);
+    --emphasis-1: rgb(99, 10, 16);
     --emphasis-1-faded: rgba(99, 10, 16, 0.3);
-	--emphasis-2: rgb(252, 240, 200);	
-    --emphasis-2-faded: rgba(252, 240, 200, 0.2);	
+    --emphasis-2: rgb(252, 240, 200);
+    --emphasis-2-faded: rgba(252, 240, 200, 0.2);
     --emphasis-3: rgb(78, 72, 66);
-    --emphasis-3-faded: rgba(78, 72, 66, 0.2);			
+    --emphasis-3-faded: rgba(78, 72, 66, 0.2);
+}
+
+/* Default set */
+html, body {
+    min-height: 100vh;
+    min-width: 100%;
 }
 
 /* sets the background colour, picture, and sites text colour*/
-body{
+body {
     background-color: var(--background-colour);
     color: var(--emphasis-1);
-    background-image: url("../images/background.webp"); /*fast drawing PNG Designed By pngtree 6843833 from https://pngtree.com/freepng/fast-food-seamless-background-with-ice-cream-burger-chocolate-pizza-french-fries-sweets-vector-pattern_5082565.html?sol=downref&id=bef */
+    background-image: url("../images/background.webp");
+    /*fast drawing PNG Designed By pngtree 6843833 from https://pngtree.com/freepng/fast-food-seamless-background-with-ice-cream-burger-chocolate-pizza-french-fries-sweets-vector-pattern_5082565.html?sol=downref&id=bef */
 }
 
 /* Id used in account.php for user info div*/
-#info{
+#order_history,
+#info {
     background-color: var(--card-colour);
-    height: 600px;  /* sets fixed height for div that will need to change if we make it mobile friendly */
+    height: 600px;
+    /* sets fixed height for div that will need to change if we make it mobile friendly */
 }
 
 /* Id used in admin.php for the store information div*/
-#str_info{
-    margin-right: 10%;  /* Margin used to push add items div away*/
+#str_info {
+    margin-right: 10%;
+    /* Margin used to push add items div away*/
     padding-left: 30px;
     border-radius: 15px;
-    height: 350;    /* fixed height for the div that will need to change when made mobile friendly */
+    height: 350;
+    /* fixed height for the div that will need to change when made mobile friendly */
 }
 
 /* Id used in admin.php for the add items div */
-#add{
-    margin-left: 10%;   /* Margin to push away from store information div */
+#add {
+    margin-left: 10%;
+    /* Margin to push away from store information div */
     padding-left: 13px;
     border-radius: 15px;
 }
 
-/* Id used in admin.php for the current items div*/ 
-#items_table{ border-radius: 15px;}
+/* Id used in admin.php for the current items div*/
+#items_table {
+    border-radius: 15px;
+}
 
 /* Id used in cart.php for the cart items div*/
-#cart{
+#cart {
     background-color: var(--card-colour);
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
 }
 
-/* Id used in cart.php for the order information div*/
-#cart_info{
-    background-color: var(--card-colour);
-    border-radius: 0px 0px 10px 10px;
-}
 
 /* Id used in cart_to_order.php for the header div */
-#order{ height: 40px; }
+#order {
+    height: 40px;
+}
 
 /* Id used in admin php for index button height */
-#index{ height: 38px; }
+#index {
+    height: 38px;
+}
+
 /* Class that adds a transparent background like all other cards */
-.background{ background-color: var(--card-colour);}
+.background {
+    background-color: var(--card-colour);
+}
 
 /* bootstrap btn class updated with our colour scheme */
-.btn-primary{
+.btn-primary {
     --bs-btn-bg: var(--header-colour);
     --bs-btn-border-color: var(--header-colour);
 
@@ -83,7 +99,7 @@ body{
 }
 
 /* bootstrap btn class updated with our colour scheme */
-.btn-secondary{
+.btn-secondary {
     --bs-btn-bg: var(--emphasis-3);
     --bs-btn-border-color: var(--emphasis-3);
 
@@ -94,27 +110,31 @@ body{
 }
 
 /* bootstrap card class updated with our colour scheme */
-.card{
+.card {
     background-color: var(--card-colour);
     border: var(--bs-card-border-width) solid var(--emphasis-2-faded);
     color: var(--emphasis-1)
 }
 
 /* bootstrap navbar class updated with our colour scheme */
-.navbar{
+.navbar {
     --bs-navbar-color: var(--emphasis-2);
     --bs-navbar-hover-color: var(--emphasis-2-faded);
     --bs-navbar-active-color: var(--emphasis-2-faded);
 }
 
 /* Prevents the navbar size from being inconsistent */
-nav.navbar.navbar-expand-lg.bg.fixed-top{ height: 50px; }
+nav.navbar.navbar-expand-lg.bg.fixed-top {
+    height: 50px;
+}
 
 /* updates bootstrap navbar-brand with our colour scheme */
-.navbar-brand{ color: var(--emphasis-2); }
+.navbar-brand {
+    color: var(--emphasis-2);
+}
 
 /* updates bootstrap model with our colour scheme */
-.modal{
+.modal {
     --bs-modal-bg: var(--emphasis-2);
     --bs-modal-color: var(--emphasis-1);
     --bs-modal-footer-border-color: none;
@@ -122,26 +142,65 @@ nav.navbar.navbar-expand-lg.bg.fixed-top{ height: 50px; }
 }
 
 /* background colour for navbar*/
-.bg{ background-color: var(--header-colour); }
+.bg {
+    background-color: var(--header-colour);
+}
 
 /* general styles for table elements */
-th, td { 
+th,
+td {
     border-bottom: 1px solid var(--emphasis-1);
     padding: 5px;
 }
 
 /* pictures for the index menu */
-.item_picture {width: 100%; aspect-ratio: 1/1; object-fit: cover;}
+.item_picture {
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
 
 /* initially used just for the cart but now used for any smaller version of the pictures */
-.cart_picture {width: 20%; aspect-ratio: 1/1; object-fit: cover;}
+.cart_picture {
+    width: 20%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
 
 /* force inputs inside of modals to have rounded edges */
-.m-border{border-radius:0 5px 5px 0 !important;}
+.m-border {
+    border-radius: 0 5px 5px 0 !important;
+}
 
 /* Updates bootstrap class with our colour scheme*/
-.border-top{border-top: var(--bs-border-width) var(--bs-border-style) var(--emphasis-1)!important;}
-.border-bottom {border-bottom: var(--bs-border-width) var(--bs-border-style) var(--emphasis-1)!important;}
+.border-top {
+    border-top: var(--bs-border-width) var(--bs-border-style) var(--emphasis-1) !important;
+}
+
+.border-bottom {
+    border-bottom: var(--bs-border-width) var(--bs-border-style) var(--emphasis-1) !important;
+}
 
 /* Used for updating text colour when needed */
-.colour{color: var(--emphasis-1);}
+.colour {
+    color: var(--emphasis-1);
+}
+
+/* For the purpose of mobile responsive, create class that set div which
+    is the direct child of body tag vertically centered */
+.v-center {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+/* Change Stripe payment button */
+/* .stripe-button-el span {
+    background: #5e366a !important;
+    background-image: none;
+    background-color: #5e366a !important;
+} */
