--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -33,26 +33,8 @@ body {
     /* sets fixed height for div that will need to change if we make it mobile friendly */
 }
 
-/* Id used in admin.php for the store information div*/
-#str_info {
-    margin-right: 10%;
-    /* Margin used to push add items div away*/
-    padding-left: 30px;
-    border-radius: 15px;
-    height: 350;
-    /* fixed height for the div that will need to change when made mobile friendly */
-}
-
-/* Id used in admin.php for the add items div */
-#add {
-    margin-left: 10%;
-    /* Margin to push away from store information div */
-    padding-left: 13px;
-    border-radius: 15px;
-}
-
-/* Id used in admin.php for the current items div*/
-#items_table {
+/* Ids used in admin.php */
+#str_info, #add, #items_table {
     border-radius: 15px;
 }
 
